--- a/src/app/Guides/guides-list/guides-list.component.html
+++ b/src/app/Guides/guides-list/guides-list.component.html
@@ -1,47 +1,62 @@
-<div class="add-button-container">
-  <button mat-icon-button routerLink="/NewGuid" matTooltip="Add New Guide">
-    <mat-icon>add</mat-icon>
-  </button>
+<div class="guide-list-container">
+  <div class="toolbar">
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Search guides</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter by title, creator...">
+    </mat-form-field>
+    <button mat-fab color="primary" class="add-button" (click)="navigateToNewGuide()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 full-width">
+
+    <!-- Guide ID Column -->
+    <ng-container matColumnDef="guideId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Guide ID </th>
+      <td mat-cell *matCellDef="let guide"> {{ guide.guideId }} </td>
+    </ng-container>
+
+    <!-- Title Column -->
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+      <td mat-cell *matCellDef="let guide"> {{ guide.title }} </td>
+    </ng-container>
+       <!-- categoryName Column -->
+       <ng-container matColumnDef="categoryName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> categoryName </th>
+        <td mat-cell *matCellDef="let guide"> {{ guide.categoryName }} </td>
+      </ng-container>
+      
+    <!-- Created By Column -->
+    <ng-container matColumnDef="createdBy">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Created By </th>
+      <td mat-cell *matCellDef="let guide"> {{ guide.createdBy }} </td>
+    </ng-container>
+
+    <!-- Created Date Column -->
+    <ng-container matColumnDef="createdDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Created Date </th>
+      <td mat-cell *matCellDef="let guide"> {{ guide.createdDate | date:'medium' }} </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let guide">
+        <button mat-button (click)="openGuide(guide.guideId)">
+          <mat-icon>visibility</mat-icon> View
+        </button>
+        <button mat-button (click)="editGuide(guide.guideId)">
+          <mat-icon>edit</mat-icon> Edit
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Header and Row Definitions -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
-
-<table mat-table [dataSource]="guides" class="mat-elevation-z8">
-
-  <!-- Columns as previously defined -->
-
-  <ng-container matColumnDef="guideId">
-    <th mat-header-cell *matHeaderCellDef> guideId </th>
-    <td mat-cell *matCellDef="let guide"> {{ guide.guideId }} </td>
-  </ng-container>
-  <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef> Title </th>
-    <td mat-cell *matCellDef="let guide"> {{ guide.title }} </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="createdBy">
-    <th mat-header-cell *matHeaderCellDef> Created By </th>
-    <td mat-cell *matCellDef="let guide"> {{ guide.createdBy }} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="createdDate">
-    <th mat-header-cell *matHeaderCellDef> Created Date </th>
-    <td mat-cell *matCellDef="let guide"> {{ guide.createdDate | date:'medium' }} </td>
-  </ng-container>
-
-
-  <!-- Actions Column -->
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let guide">
-      <button mat-button (click)="openGuide(guide.guideId)">
-        <mat-icon>visibility</mat-icon> View
-      </button>
-      <button mat-button (click)="editGuide(guide.guideId)">
-        <mat-icon>edit</mat-icon> Edit
-      </button>
-    </td>
-  </ng-container>
-
-  <!-- Header and Row Definitions -->
-  <tr mat-header-row *matHeaderRowDef="['guideId','title', 'createdBy', 'createdDate', 'actions']"></tr>
-  <tr mat-row *matRowDef="let row; columns: ['guideId','title', 'createdBy', 'createdDate', 'actions','guideId'];" class="mat-row"></tr>
-</table>
