--- a/src/app/Guides/view-guide/view-guide.component.html
+++ b/src/app/Guides/view-guide/view-guide.component.html
@@ -1,22 +1,19 @@
-<!-- ViewGuideComponent.html -->
 <div class="guide-container" dir="rtl">
-    <h1>{{ guide.title }}</h1>
-    <p>Created by: {{ guide.createdBy }}</p>
-    <p>Created date: {{ guide.createdDate | date:'medium' }}</p>
-  
-    <div *ngFor="let item of guideItems">
-      <div *ngIf="item.type === 'text'">
-        <p> {{ item.textContent }}</p>
-      </div>
-      
-      <div *ngIf="item.type === 'picture'">
-       
-        <img [src]="item.imagePath" alt="Guide Image" class="image-preview">
-      </div>
+  <h1>{{ guide.title }}</h1>
+  <p>Created by: {{ guide.createdBy }}</p>
+  <p>Created date: {{ guide.createdDate | date:'medium' }}</p>
+
+  <div *ngFor="let item of guideItems">
+    <div *ngIf="item.type === 'Text'">
+      <p>{{ item.textContent }}</p>
     </div>
-  
-    <div *ngIf="guideItems.length === 0">
-      <p>No content available.</p>
+    <div *ngIf="item.type === 'Picture'">
+      <!-- Add styles directly here for debugging -->
+      <img [src]="transformImagePath(item.imagePath)" alt="Guide Image" style="width:100%; max-width:600px; height:auto;">
     </div>
   </div>
-  
+
+  <div *ngIf="guideItems.length === 0">
+    <p>No content available.</p>
+  </div>
+</div>
