--- a/src/app/Guides/view-guide/view-guide.component.html
+++ b/src/app/Guides/view-guide/view-guide.component.html
@@ -1,19 +1,29 @@
+<!-- guide.component.html -->
 <div class="guide-container" dir="rtl">
-  <h1>{{ guide.title }}</h1>
-  <p>Created by: {{ guide.createdBy }}</p>
-  <p>Created date: {{ guide.createdDate | date:'medium' }}</p>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        <mat-icon>book</mat-icon>
+        {{ guide.title }}
+      </mat-card-title>
+      <mat-card-subtitle>
+        Created by: {{ guide.createdBy }}
+      </mat-card-subtitle>
+    </mat-card-header>
 
-  <div *ngFor="let item of guideItems">
-    <div *ngIf="item.type === 'Text'">
-      <p>{{ item.textContent }}</p>
-    </div>
-    <div *ngIf="item.type === 'Picture'">
-      <!-- Add styles directly here for debugging -->
-      <img [src]="transformImagePath(item.imagePath)" alt="Guide Image" style="width:100%; max-width:600px; height:auto;">
-    </div>
-  </div>
-
-  <div *ngIf="guideItems.length === 0">
-    <p>No content available.</p>
-  </div>
+    <mat-card-content>
+      <p>Created date: {{ guide.createdDate | date:'medium' }}</p>
+      <div *ngFor="let item of guideItems">
+        <ng-container *ngIf="item.type === 'Text'">
+          <p>{{ item.textContent }}</p>
+        </ng-container>
+        <ng-container *ngIf="item.type === 'Picture'">
+          <img [src]="transformImagePath(item.imagePath)" alt="Guide Image" class="guide-image">
+        </ng-container>
+      </div>
+      <div *ngIf="guideItems.length === 0">
+        <p>No content available.</p>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
