--- a/src/app/Guides/new-guide-form/new-guide-form.component.html
+++ b/src/app/Guides/new-guide-form/new-guide-form.component.html
@@ -1,4 +1,8 @@
-<!-- new-guide-form.component.html -->
+
+<mat-toolbar color="primary" class="app-header">
+  MyApp Name - רשימת מדריכים
+</mat-toolbar>
+
 <div class="body" dir="rtl">
   <mat-card>
     <mat-card-header>
@@ -66,3 +70,6 @@
     </mat-card-content>
   </mat-card>
 </div>
+<mat-toolbar color="primary" class="app-footer">
+  © 2024 MyCompany
+</mat-toolbar>
