--- a/src/app/Guides/guides-list/guides-list.component.html
+++ b/src/app/Guides/guides-list/guides-list.component.html
@@ -8,7 +8,7 @@
 
 <div class="guide-list-container">
   <div class="toolbar">
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field appearance="outline" class="full-width" style="width: 90%;">
       <mat-label>Search guides</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter by title, creator...">
     </mat-form-field>
