--- a/src/app/Guides/new-guide-form/new-guide-form.component.html
+++ b/src/app/Guides/new-guide-form/new-guide-form.component.html
@@ -1,7 +1,6 @@
+<app-header></app-header>
 
-<mat-toolbar color="primary" class="app-header">
-  MyApp Name - רשימת מדריכים
-</mat-toolbar>
+
 
 <div class="body" dir="rtl">
   <mat-card>
@@ -70,6 +69,5 @@
     </mat-card-content>
   </mat-card>
 </div>
-<mat-toolbar color="primary" class="app-footer">
-  © 2024 MyCompany
-</mat-toolbar>
+
+<app-footer-guide></app-footer-guide>
