--- a/src/app/Guides/guides-list/guides-list.component.scss
+++ b/src/app/Guides/guides-list/guides-list.component.scss
@@ -4,20 +4,18 @@
   align-items: center;
   width: 100%;
   background-color: #f8f8f8; /* Light grey background */
-  padding: 20px;
-  padding-bottom: 60px; /* Ensure there's space for the footer */
-  padding-top: 60px; /* Ensure there's space for the header */
+  padding-bottom: 60px; /* Space for the footer */
+  padding-top: 60px; /* Space for the header */
 }
 
 .toolbar {
-  width: 100%; /* Ensure full width */
+  width: 100%; /* Full width */
   display: flex;
-  justify-content: space-between; /* This keeps the search field and add button on opposite ends */
+  justify-content: space-between; /* Search field and add button on opposite ends */
   align-items: center;
-  padding: 0 0px;
+  padding: 0;
   margin-bottom: 5px;
 }
-
 
 .search-field {
   flex-grow: 1;
@@ -25,32 +23,17 @@
 }
 
 .add-button {
- // background-color: #007bff; /* Sets the button color to match the header/footer */
   color: white; /* Ensures the icon within the button is white */
 }
 
 .table-style {
+  width: 100%; /* Full available width */
   background-color: white;
   border-radius: 8px;
-}
-
-
-.table-style {
-  width: 100%; /* Ensures the table uses the full available width */
-  background-color: white;
-  border-radius: 8px;
-}
-mat-header-cell {
-  color: #a8225e; /* Dark pink color for headers */
-  font-weight: bold;
 }
 
 mat-cell {
   padding: 16px;
-}
-
-mat-icon-button {
-  color: #007bff; /* Blue color for icons */
 }
 
 mat-paginator {
@@ -59,32 +42,17 @@ mat-paginator {
   font-weight: bold;
 }
 
-.app-header, .app-footer {
-  color: white;
-  //background-color: #007bff; /* Vibrant blue color for both header and footer */
-  width: 100%;
-  height: 50px;
-  line-height: 50px; /* Align text vertically */
-}
-
-.app-footer {
-  position: absolute;
-  bottom: 0;
-}
-mat-toolbar[color="primary"] {
- // background-color: #007bff; // Explicitly set the vibrant blue color
+.mat-toolbar[color="primary"] {
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/* If your toolbar has spacing elements like .example-spacer, ensure they are not affecting alignment */
 .example-spacer {
-  flex: 0; /* This removes the spacer's effect. Adjust or remove the spacer as needed */
+  flex: 0; /* No effect from spacer */
 }
 
-/* Optionally, ensure icons and text within the toolbar are centered as well */
 .mat-toolbar .example-icon, .mat-toolbar span {
-  margin: 0 8px; /* Provides consistent spacing around items */
+  margin: 0 8px; /* Consistent spacing around items */
 }
